--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_localizations:
-    sdk: flutter
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_localizations:
+    sdk: flutter
   bloc: ^9.0.0
   flutter_bloc: ^9.0.0
   cloud_firestore: ^5.6.2
@@ -68,6 +68,8 @@ dependencies:
   dio: ^5.7.0
   # csc_picker: ^0.2.7
   # intl: ^0.19.1
+  # flutter_intl:
+  #   enabled: true
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
@@ -86,6 +88,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
