--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,10 +66,9 @@ dependencies:
   http: ^1.3.0
   dropdown_search: ^5.0.3
   dio: ^5.7.0
+  intl: ^0.19.0
   # csc_picker: ^0.2.7
   # intl: ^0.19.1
-  # flutter_intl:
-  #   enabled: true
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
@@ -133,8 +132,8 @@ flutter_assets:
   output_path: lib/core/utils/
   filename: app_images.dart
   field_prefix: null
-  flutter_intl: null
-  enabled: true
+# flutter_intl: null
+#   enabled: true
 flutter_intl:
   enabled: true
 
