--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   dropdown_search: ^5.0.3
   dio: ^5.7.0
   intl: ^0.19.0
+  photo_view: ^0.14.0  
   # csc_picker: ^0.2.7
   # intl: ^0.19.1
 
