--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   dio: ^5.7.0
   intl: ^0.19.0
   photo_view: ^0.14.0  
+  reorderables: ^0.6.0  
   # csc_picker: ^0.2.7
   # intl: ^0.19.1
 
